--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 					</div>
 					<header>
 						<h2 style="color: #E3482E;">
-							<span style="color: #FFFFFF"> Call Today: </span><a href="tel:516)324-4687"> (516) 324 - 4687</a>
+							<span style="color: #FFFFFF"> Call Today: </span><a href="tel:516)324-4687" style="font-size: xx-large;"> (516) 324 - 4687</a>
 							<!-- <span style="margin-left: 10px;"><em>OR</em></span> -->
 						</h2>
 						<a href="appointment.html" class="button">Schedule Appointment</a>
-						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687">Se Habla Español!</a></h2>
+						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687" style="font-size: xx-large;">Se Habla Español!</a></h2>
 					</header>
 				</section>
 
@@ -125,7 +125,7 @@
 				<!-- Services -->
 				<section class="wrapper style2">
 					<div class="container">
-					<div style="text-align: center;"><h2>Services</h2></div>
+						<div style="text-align: center;"><h2>Services</h2></div>
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
@@ -150,6 +150,37 @@
 											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throughout 
 											the process of serving your water there are contaminats that may flow into your drinking water. <strong>I can help you find out 
 											if your drinking water contains coliform bacteria such as E. coli.</strong>
+										</p>
+									</div>
+								</div>
+							</section>
+						</div>
+					</div>
+					<div class="container">
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="resources.html" class="image left"><img src="images/sprinkler_repair.jpeg" alt="sprinkler repair and installation" /></a>
+									<div class="inner">
+										<h3><a href="resources.html">Sprinkler Installation & Repair Service</a></h3>
+										<p style="text-align: justify;">
+											A broken sprinkler system can cause a lot of damage and turn out expensive. Not giving
+											proper maintenance to a sprinkler system ruin your landscake, leak over time and increase your water bill. I've partnered with knowledgable
+											individuals that specialize in sprinkler systems and are able to deliver quality services. <strong><a href="#" >Click here to learn more!</a></strong>
+										</p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="services.html#bacteria_service" class="image left"><img src="images/spring_winter.png" alt="Water bacteria examination" /></a>
+									<div class="inner">
+										<h3><a href="services.html#bacteria_service">Spring Turn on & Fall Winterization</a></h3>
+										<p style="text-align: justify;">
+											Your sprinkler system is a complex system not to be messed with. Turning on your sprinkler system is not simply allowing the water to flow, 
+											this should include checking for leaks, ensuring that your backflow device is not damaged and delivery of adequate water to your lawn. Also, Proper winterization by a professional is recommended in the fall
+											to blow out all the remaining water in the system.
+											<strong><a href="#" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
