--- a/about.html
+++ b/about.html
@@ -37,8 +37,9 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">NYS Certified Backflow Tester  </span> <i class="fas fa-user-check" style="color: darkgreen;"></i></a></h1>
-
+						<h1 style="color: #E3482E; text-align: center;">
+							<span style="color: #333; font-size: xx-large;"> Call Today: </span><a href="tel:516)324-4687" style="font-size: xx-large;"> (516) 324 - 4687</a>
+						</h1>
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
