--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="resources.html" class="image left"><img src="images/sprinkler_repair.jpeg" alt="sprinkler repair and installation" /></a>
+									<a href="services.html#sprinkler_service" class="image left"><img src="images/sprinkler_repair.jpeg" alt="sprinkler repair and installation" /></a>
 									<div class="inner">
-										<h3><a href="resources.html">Sprinkler Installation & Repair Service</a></h3>
+										<h3><a href="services.html#sprinkler_service">Sprinkler Installation & Repair Service</a></h3>
 										<p style="text-align: justify;">
 											A broken sprinkler system can cause a lot of damage and turn out expensive. Not giving
 											proper maintenance to a sprinkler system ruin your landscake, leak over time and increase your water bill. I've partnered with knowledgable
@@ -173,9 +173,9 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#bacteria_service" class="image left"><img src="images/spring_winter.png" alt="Water bacteria examination" /></a>
+									<a href="services.html#sprinkler_service" class="image left"><img src="images/spring_winter.png" alt="sprinkler winterization and turn on" /></a>
 									<div class="inner">
-										<h3><a href="services.html#bacteria_service">Spring Turn on & Fall Winterization</a></h3>
+										<h3><a href="services.html#sprinkler_service">Spring Turn on & Fall Winterization</a></h3>
 										<p style="text-align: justify;">
 											Your sprinkler system is a complex system not to be messed with. Turning on your sprinkler system is not simply allowing the water to flow, 
 											this should include checking for leaks, ensuring that your backflow device is not damaged and delivery of adequate water to your lawn. Also, Proper winterization by a professional is recommended in the fall
