--- a/services.html
+++ b/services.html
@@ -37,7 +37,9 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">NYS Certified Backflow Tester  </span> <i class="fas fa-user-check" style="color: darkgreen;"></i></a></h1>
+						<h1 style="color: #E3482E; text-align: center;">
+							<span style="color: #333; font-size: xx-large;"> Call Today: </span><a href="tel:516)324-4687" style="font-size: xx-large;"> (516) 324 - 4687</a>
+						</h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -119,6 +121,19 @@
 												to find out if your drinking water is safe.
 											</p>
 											<p>Additionally, NYS offers free led testing by their <i>Free Led Testing Pilot Program</i>. To read more on how you can obtain your free led testing kit please click here.</p>
+
+											<h3 id="sprinkler_service">Sprinkler Installation & Repair Service</h3>
+											<p style="margin-bottom: 0px;">
+												Over the years a sprinkler system may not be as efficient or work as expected. It is vital to ensure that proper service is provided. I've worked along side two of the most 
+												knowledgable sprinkler service handyman's here in the region of Nassau County. If you are looking for installation/repairs, system upgrades, spring turn on or fall winterization,
+												feel free to contact me or directly to:
+											</p>
+											<br>
+											<p>
+												<strong>Steve Koprivnik:</strong> <a href="(516) 384-9125">(516) 384-9125</a>
+												<br>
+												<strong>Roberto Carlos:</strong> <a href="(516) 451-7816">(516) 451-7816</a>
+											</p>
 										</article>
 
 								</div>
