--- a/services.html
+++ b/services.html
@@ -125,8 +125,8 @@
 											<h3 id="sprinkler_service">Sprinkler Installation & Repair Service</h3>
 											<p style="margin-bottom: 0px;">
 												Over the years a sprinkler system may not be as efficient or work as expected. It is vital to ensure that proper service is provided. I've worked along side two of the most 
-												knowledgable sprinkler service handyman's here in the region of Nassau County. If you are looking for installation/repairs, system upgrades, spring turn on or fall winterization,
-												feel free to contact me or directly to:
+												knowledgable sprinkler service individuals here in the region of Nassau County. If you are looking for installation/repairs, system upgrades, spring turn on or fall winterization,
+												feel free to contact me or directly with:
 											</p>
 											<br>
 											<p>
