--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 										<p style="text-align: justify;">
 											A broken sprinkler system can cause a lot of damage and turn out expensive. Not giving
 											proper maintenance to a sprinkler system ruin your landscake, leak over time and increase your water bill. I've partnered with knowledgable
-											individuals that specialize in sprinkler systems and are able to deliver quality services. <strong><a href="#" >Click here to learn more!</a></strong>
+											individuals that specialize in sprinkler systems and are able to deliver quality services. <strong><a href="services.html#sprinkler_service" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
@@ -180,7 +180,7 @@
 											Your sprinkler system is a complex system not to be messed with. Turning on your sprinkler system is not simply allowing the water to flow, 
 											this should include checking for leaks, ensuring that your backflow device is not damaged and delivery of adequate water to your lawn. Also, Proper winterization by a professional is recommended in the fall
 											to blow out all the remaining water in the system.
-											<strong><a href="#" >Click here to learn more!</a></strong>
+											<strong><a href="services.html#sprinkler_service" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
