minor style fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<span style="color: #FFFFFF"> Call Today: </span><a href="tel:516)324-4687" style="font-size: xx-large;"> (516) 324 - 4687</a>
 							<!-- <span style="margin-left: 10px;"><em>OR</em></span> -->
 						</h2>
-						<a href="appointment.html" class="button">Schedule Appointment</a>
+						<a href="appointment.html" class="button" style="margin-bottom: 10px;">Schedule Appointment</a>
 						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687" style="font-size: xx-large;">Se Habla Español!</a></h2>
 					</header>
 				</section>
