--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
 											<p style="text-align: justify;">
 												I am a resident of Nassau County, Long Island. I love my community and I look forward to making it a better place.
-												I graduated from Queens College with a bachelors in computer science. As an engineer, I look into ways to make things
+												I graduated from Queens College with a bachelors in computer science. As an engineer, I look into ways to make things that
 												work, work smarter utilizing technology. Becoming a backflow tester has allowed to learn more about the water service industry.
 												Every test I perform, I carefully analyze the situation and record the procedure data. This data will be used to improve 
 												the testing process to better assist customers and provide excellent service.
