--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
 										<p style="text-align: justify;">
 											Is your drinking water safe?
 											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throughout 
-											the process of serving your water there are contaminats that may flow into your drinking water. <strong>I can help you find out 
-											if your drinking water contains coliform bacteria such as E. coli.</strong>
+											the process of serving your water there are contaminats that may flow into your drinking water.
 										</p>
 									</div>
 								</div>
@@ -166,7 +165,7 @@
 										<p style="text-align: justify;">
 											A broken sprinkler system can cause a lot of damage and turn out expensive. Not giving
 											proper maintenance to a sprinkler system ruin your landscake, leak over time and increase your water bill. I've partnered with knowledgable
-											individuals that specialize in sprinkler systems and are able to deliver quality services. <strong><a href="services.html#sprinkler_service" >Click here to learn more!</a></strong>
+											individuals that specialize in sprinkler systems and are able to deliver quality services. Call Roberto for sprinkler inqueries <a href="(516) 451-7816">(516) 451-7816</a>. <strong><a href="services.html#sprinkler_service" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
