--- a/index.html
+++ b/index.html
@@ -109,12 +109,10 @@
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-head-side-mask"></i>
-									<h3>Customer Safety</h3>
+									<i class="icon solid major fa-star"></i>
+									<h3>Expertise with Leading Backflow Management Systems</h3>
 									<p style="text-align: justify;">
-										Your safety is the highest priority. You will receive a call before and upon arrival 
-										of your appointment. Distancing guidelines are followed to ensure minimal contact. 
-										Covid-19 vaccinated and can show proof on site.
+										Eperienced in working with industry-leading backflow management systems, including <strong>BSI</strong>, <strong>Trak My Backflow</strong>, and <strong>VEPO Crossconnex</strong>. Your paperwork is reviewed and filed with the right water department. 
 									</p>
 								</div>
 							</section>
@@ -142,13 +140,11 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#bacteria_service" class="image left"><img src="images/water_bacteria.png" alt="Water bacteria examination" /></a>
+									<a href="services.html#bacteria_service" class="image left"><img src="images/landscaping-mowing-backflow.jpg" alt="Water bacteria examination" /></a>
 									<div class="inner">
-										<h3><a href="services.html#bacteria_service">Water Bacteria Test</a></h3>
+										<h3><a href="services.html#bacteria_service">Landscaping Services COMING SOON!</a></h3>
 										<p style="text-align: justify;">
-											Is your drinking water safe?
-											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throughout 
-											the process of serving your water there are contaminats that may flow into your drinking water.
+											We are working on partnership with landscaping companies to provide you with the best services!
 										</p>
 									</div>
 								</div>
@@ -248,7 +244,8 @@
 										<h3><a href="about.html#about_self_study">Testing Done Right</a></h3>
 										<p style="text-align: justify;">
 											Safeguarding the public water system is an essential part of my mission to protect public health.
-											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests.
+											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests. With knowledge
+											on how to use online systems like BSI, Trackmybackflow and VEPO, you can rest assure that your tests are well handled.
 										</p>
 									</div>
 								</div>
