--- a/services.html
+++ b/services.html
@@ -113,6 +113,7 @@
 												<li>Any commercial space with a dedicated fire service line / sprinkler system</li>
 												<li>Churches with baptismal pools</li>
 											</ul>
+											<p></p>
 											<h3 id="sprinkler_service">Sprinkler Installation & Repair Service</h3>
 											<p style="margin-bottom: 0px;">
 												Over the years a sprinkler system may not be as efficient or work as expected. It is vital to ensure that proper service is provided. I've worked along side two of the most 
@@ -125,13 +126,10 @@
 												<br>
 												<strong>Steve Koprivnik:</strong> <a href="(516) 384-9125">(516) 384-9125</a>
 											</p>
-											<h3 id="bacteria_service">Water Bacteria Test</h3>
+											<h3 id="bacteria_service">Landscaping Services COMING SOON!</h3>
 											<p style="margin-bottom: 10px;">
-												We are well aware that bacteria can come in many different forms. Your potable water could be a contaminated with bacteria and you wouldnt even know it.
-												That is why I offer <strong>Coliform bacteria testing</strong> to ensure that your drinking water is safe from bacteria such as E.coli. <a href="appointment.html">Schedule your appointment</a>
-												to find out if your drinking water is safe.
+												We are working on partnership with landscaping companies to provide you with the best services!
 											</p>
-											<p>Additionally, NYS offers free led testing by their <i>Free Led Testing Pilot Program</i>. To read more on how you can obtain your free led testing kit please click here.</p>
 										</article>
 
 								</div>
