--- a/about.html
+++ b/about.html
@@ -98,9 +98,7 @@
 											</p>
 
 											<p style="text-align: justify;">
-												Additionally, I offer a service no other competitors of my field offer, that is, <strong>testing to identify coliform bacteria such as E. coli.</strong> 
-												It is recommended that you perform such tests in a yearly basis or as often as you prefer to ensure that you and your loved ones are consuming bacteria free water. 
-												<!-- <strong>MEDIUM ARticle bacteria and water testing</strong> -->
+												Additionally, I've partnered with sprinkler service, plumbing company, and landscaping company to better assist you with anything gardening related services. Feel free to reach out to me or to them individually.
 											</p>
 
 											<p style="text-align: justify;">
