--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<i class="icon solid major fa-star"></i>
 									<h3>Expertise with Leading Backflow Management Systems</h3>
 									<p style="text-align: justify;">
-										Eperienced in working with industry-leading backflow management systems, including <strong>BSI</strong>, <strong>Trak My Backflow</strong>, and <strong>VEPO Crossconnex</strong>. Your paperwork is reviewed and filed with the right water department. 
+										Eperienced in working with industry-leading backflow management systems, including <strong>BSI</strong>, <strong>Track My Backflow</strong>, and <strong>VEPO Crossconnex</strong>. Your paperwork is reviewed and filed with the right water department. 
 									</p>
 								</div>
 							</section>
