feat: added landscaping services

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 									<span class="image featured contact" ><img src="images/get-in-touch.png" alt="Contact Carlos Beltran Backflow" style="margin-left: auto; margin-right: auto;"/></span>
 
 									<ul>
-										<li><strong>Call/Text: <a href="tel:516)324-4687"> (516) 324 - 4687</a></strong></li>
+										<li><strong>Call/Text: <a href="tel:(516)324-4687"> (516) 324 - 4687</a></strong></li>
 										<li><strong>Email: <a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></strong></li>
 									</ul>
 								</article>
@@ -124,7 +124,7 @@
 								<!-- <h3>More Links to Stuff</h3> -->
 								<ul class="links">
 									<li><i class="fas fa-envelope-square"></i><span style="font-size: medium; padding-left: 10px;"><a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></span></li>
-									<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:516)324-4687"> (516) 324 - 4687</a></span></li>
+									<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:(516)324-4687"> (516) 324 - 4687</a></span></li>
 								</ul>
 							</section>
 						</div>
