--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									<div class="inner">
 										<h3><a href="resources.html">Backflow Preventer Testing</a></h3>
 										<p style="text-align: justify;">
-											<span style="font: caption; font-size: large;">Annual backflow testing is required in Nassau County, Long Island, NY, to safeguard the quality of drinking water.</span>
+											Annual backflow testing is required in Nassau County, Long Island, NY, to safeguard the quality of drinking water.
 											As a certified New York State backflow tester, I provide thorough testing of your device to ensure compliance with county regulations. 
 											I will handle all necessary documentation and promptly submit it to the county on your behalf. Your test records will also be securely maintained,
 											and I’ll gladly provide copies at any time for your convenience or future reference.
@@ -141,12 +141,12 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#bacteria_service" class="image left"><img src="images/landscaping-mowing-backflow.jpg" alt="Water bacteria examination" /></a>
+									<a href="services.html#andscaping_service" class="image left"><img src="images/landscaping-mowing-backflow.jpg" alt="Water bacteria examination" /></a>
 									<div class="inner">
-										<h3><a href="services.html#bacteria_service">Landscaping and More</a></h3>
+										<h3><a href="services.html#andscaping_service">Landscaping and More</a></h3>
 										<p style="text-align: justify;">
 											We have partnered with <a href="https://cherryvalley-landscaping.com" target="_blank" style="color: darkgreen;"><span style="font: caption; font-size: large;">Cherry Valley Landscaping</span></a>, they are Nassau County lawn care experts for over 30 years. 
-											Family-owned business providing exceptional service for residential & commercial properties. Services include Lawn Care, Tree Trimming, Power Washing, Spring and Fall Cleanup. 
+											Family-owned business providing exceptional service for residential & commercial properties. Services include Lawn Care, Tree Trimming, Power Washing, Spring and Fall Cleanup.  <strong><a href="services.html#andscaping_service" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
