--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#andscaping_service" class="image left"><img src="images/landscaping-mowing-backflow.jpg" alt="Water bacteria examination" /></a>
+									<a href="services.html#landscaping_service" class="image left"><img src="images/landscaping-mowing-backflow.jpg" alt="Water bacteria examination" /></a>
 									<div class="inner">
-										<h3><a href="services.html#andscaping_service">Landscaping and More</a></h3>
+										<h3><a href="services.html#landscaping_service">Landscaping and More</a></h3>
 										<p style="text-align: justify;">
 											We have partnered with <a href="https://cherryvalley-landscaping.com" target="_blank" style="color: darkgreen;"><span style="font: caption; font-size: large;">Cherry Valley Landscaping</span></a>, they are Nassau County lawn care experts for over 30 years. 
-											Family-owned business providing exceptional service for residential & commercial properties. Services include Lawn Care, Tree Trimming, Power Washing, Spring and Fall Cleanup.  <strong><a href="services.html#andscaping_service" >Click here to learn more!</a></strong>
+											Family-owned business providing exceptional service for residential & commercial properties. Services include Lawn Care, Tree Trimming, Power Washing, Spring and Fall Cleanup.  <strong><a href="services.html#landscaping_service" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
