--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
 -->
 <html>
 	<head>
-		<title>Backflow Prevention Testing | Nassau County | NYS Certified</title>
+		<title>Backflow Testing | Nassau County | NYS Certified</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
 		<meta name="description"content="Backflow preventer testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
-		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
+		<meta name="keywords" content="backflow testing Nassau County, backflow testing Long Island, sprinkler backflow testing, certified backflow tester Nassau, backflow preventer testing, RPZ testing Nassau County, DCV valve testing, irrigation backflow inspection, residential backflow services, commercial backflow testing, backflow certification Nassau County, backflow tester near me, water backflow prevention, Long Island backflow services">
+		<!-- Swiper CSS -->
+		<link
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+		/>
+
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 		<link rel="icon" href="images/favicon.ico">
+		<link rel="apple-touch-icon" href="images/img/apple-touch-icon.png"> 
 	
 	<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
@@ -32,6 +39,26 @@
 			})();
 		</script>
 	<!--End of Tawk.to Script-->
+	
+		<!-- Swiper JS -->
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+		<!-- 📌 Add the schema markup below -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Plumber",
+				"name": "Backflow Friends",
+				"address": {
+					"@type": "PostalAddress",
+					"addressLocality": "Nassau County",
+					"addressRegion": "NY",
+					"postalCode": "11550"
+				},
+				"telephone": "516-324-4687",
+				"url": "https://www.backflowfriends.com"
+			}
+		</script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -127,7 +154,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="resources.html" class="image left"><img src="images/backflow_testing.JPG" alt="Watts tk-9a backflow preventer test kit" /></a>
+									<a href="resources.html" class="image left"><img src="images/backflow-testing-meter-pit.jpg" alt="Watts tk-9a backflow preventer test kit" /></a>
 									<div class="inner">
 										<h3><a href="resources.html">Backflow Preventer Testing</a></h3>
 										<p style="text-align: justify;">
@@ -170,14 +197,12 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#sprinkler_service" class="image left"><img src="images/spring_winter.png" alt="sprinkler winterization and turn on" /></a>
+									<a href="services.html#sprinkler_service" class="image left"><img src="images/sewer-drain-services-logo.png" alt="Sewer and Drain services" /></a>
 									<div class="inner">
-										<h3><a href="services.html#sprinkler_service">Spring Turn on & Fall Winterization</a></h3>
+										<h3><a href="services.html#sprinkler_service">Sewer & Drain Services</a></h3>
 										<p style="text-align: justify;">
-											Your sprinkler system is a complex system not to be messed with. Turning on your sprinkler system is not simply allowing the water to flow, 
-											this should include checking for leaks, ensuring that your backflow device is not damaged and delivery of adequate water to your lawn. Also, Proper winterization by a professional is recommended in the fall
-											to blow out all the remaining water in the system.
-											<strong><a href="services.html#sprinkler_service" >Click here to learn more!</a></strong>
+											We have partnered with <a href="https://247sewer.com" target="_blank">Sewer & Drain Services LLC</a> a 24/7 emergency response team for everything that keeps water flowing where it should. Serving Nassau County, Hempstead, and Queens Village, rapid service to resolve any drainage crisis.
+											<strong><a href="https://247sewer.com" >Click here to learn more!</a></strong>
 										</p>
 									</div>
 								</div>
@@ -202,7 +227,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#residential_service" class="image left"><img src="images/drinking_water.jpg" alt="Female drinking water" /></a>
+									<a href="services.html#residential_service" class="image left"><img src="images/residential-backflow-preventer-DCV.jpg" alt="backflow preventer residential DCV domestic" /></a>
 									<div class="inner">
 										<h3><a href="services.html#residential_service">Residential Testing</a></h3>
 										<p style="text-align: justify;">
@@ -229,7 +254,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="services.html#commercial_service" class="image left"><img src="images/water_faucet.jpg" alt="Faucet with running water" /></a>
+									<a href="services.html#commercial_service" class="image left"><img src="images/commercial-testing-backflow.jpg" alt="commercial rpz backflow device" /></a>
 									<div class="inner">
 										<h3><a href="services.html#commercial_service">Commercial Testing</a></h3>
 										<p style="text-align: justify;">
@@ -262,12 +287,82 @@
 						<header>
 							<h2>Payment Methods Accepted</h2>
 							<br>
-							<img src="images/payment_methods.png" alt="payment methods" id="payment-img"/>
+							<img src="images/payment-methods-updated.png" alt="payment methods" id="payment-img"/>
 							<!-- <h2>Call or Text: <a href="tel:(516)324-4687"> (516) 324 - 4687</a></h2> -->
 							<!-- <a href="#" class="button">Insert Coin</a> -->
 						</header>
 					</div>
 				</section>
+
+			<!-- Customer Reviews -->
+			<section id="google-reviews" class="wrapper style3"> 
+				<div class="container">
+					<h2>What Customers Are Saying</h2>
+			
+					<!-- Swiper -->
+					<div class="swiper mySwiper">
+						<div class="swiper-wrapper">
+			
+							<!-- Review Slide -->
+							<div class="swiper-slide">
+								<blockquote>
+									<div class="star-rating">★★★★★</div>
+									<p><a href="https://g.co/kgs/SwRA3nv" target="_blank">"Carlos, was amazing! Very professional, punctual and friendly. Carlos kept me abreast of his arrival time 15 mins before he got to our home. The price was fair and reasonably..."</a></p>
+									<footer>— Drea H.</footer>
+								</blockquote>
+							</div>
+			
+							<div class="swiper-slide">
+								<blockquote>
+									<div class="star-rating">★★★★★</div>
+									<p><a href="https://g.co/kgs/EsGvLdZ" target="_blank">"I was recommended by a friend to use Backflow Friends services, and it was the best decision because Carlos is very professional and responsive. I’ll definitely use his services again. 5 star services."</a></p>
+									<footer>— Camilo Q.</footer>
+								</blockquote>
+							</div>
+			
+							<div class="swiper-slide">
+								<blockquote>
+									<div class="star-rating">★★★★★</div>
+									<p><a href="https://g.co/kgs/dPEmYQk" target="_blank">"I can say that I am satisfied with the backflow service provided. During the test performed I was able to appreciate efficiency, kindness and professionalism on explaining how the backflow device helps to keep our water safe. - Thank you for all you do!"</a></p>
+									<footer>— Maria J.</footer>
+								</blockquote>
+							</div>
+			
+							<div class="swiper-slide">
+								<blockquote>
+									<div class="star-rating">★★★★★</div>
+									<p><a href="https://g.co/kgs/29MTfuz" target="_blank">"Carlos from Backflow Friends is great! He was prompt, responsive and knew what he was doing. Highly recommended"</a></p>
+									<footer>— Yim King T.</footer>
+								</blockquote>
+							</div>
+			
+							<div class="swiper-slide">
+								<blockquote>
+									<div class="star-rating">★★★★★</div>
+									<p><a href="https://g.co/kgs/6zpLbAj" target="_blank">"Think of someone polite, professional, attentive and with a great demeanor. Now think of this same professional on a higher level, on a much higher level. -That's Carlos! He came to my house..."</a></p>
+									<footer>— Darian M.</footer>
+								</blockquote>
+							</div>
+			
+						</div>
+			
+						<!-- Swiper Navigation -->
+						<div class="swiper-button-next"></div>
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-pagination"></div>
+					</div>
+					<div style="text-align: center; margin-top: 2rem;">
+						<a
+							href="https://www.google.com/search?sca_esv=8528ae50a243c1b7&sxsrf=AHTn8zr7wbDWO01fewmUCblP7f6d-Pzziw:1742353819855&si=APYL9bs7Hg2KMLB-4tSoTdxuOx8BdRvHbByC_AuVpNyh0x2Kzc9R91YMIr_MjrQkWhmnbH67CYWPZVb6EEykXv6ipvB3L59u0c0C9_ADuS_9m3TszLaGmd2YkFmHsnbBTv3q2TmPAgxLD4SRgUk5GVYnPc6VTm6e6w%3D%3D&q=Backflow+Friends+Reviews&sa=X&ved=2ahUKEwiqrIXklZWMAxXIEmIAHVjoEAgQ0bkNegQIJhAE"
+							target="_blank"
+							class="see-more-reviews-btn"
+						>
+							See More Reviews on Google
+						</a>
+					</div>
+				</div>
+			</section>
+			
 
 			<!-- Footer -->
 				<div id="footer">
@@ -348,6 +443,25 @@
 				</div>
 
 		</div>
+
+		<!-- initialize swiper -->
+		<script>
+			const swiper = new Swiper(".mySwiper", {
+				loop: true,
+				autoplay: {
+					delay: 3000,
+					disableOnInteraction: false,
+				},
+				pagination: {
+					el: ".swiper-pagination",
+					clickable: true,
+				},
+				navigation: {
+					nextEl: ".swiper-button-next",
+					prevEl: ".swiper-button-prev",
+				},
+			});
+		</script>		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
