--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
-						<h2 style="text-align: center; margin-bottom: 30px;">Providing Excellent Service to <br> All Homeowners of Nassau County</h2>
+						<h2 style="text-align: center; margin-bottom: 30px;">Providing Excellent Service to <br> All of Nassau County</h2>
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
