reduced img size

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
 				"url": "https://www.backflowfriends.com"
 			}
 		</script>
+
+		<!-- Google Analytics - Ads -->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BN1J7W5D7K"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-BN1J7W5D7K');
+		</script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
