--- a/appointment.html
+++ b/appointment.html
@@ -15,6 +15,17 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link rel="icon" href="images/favicon.ico">
+
+			<!-- Google Analytics - Ads -->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BN1J7W5D7K"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-BN1J7W5D7K');
+		</script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
