--- a/services.html
+++ b/services.html
@@ -29,6 +29,17 @@
 			})();
 		</script>
 	<!--End of Tawk.to Script-->
+
+		<!-- Google Analytics - Ads -->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BN1J7W5D7K"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-BN1J7W5D7K');
+		</script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
