--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
 												<p>Servicing Nassau County, Long Island, NY Backflow Preventer Testing and Water Safety</p>
 											</header>
 
-											<span class="image featured"><img src="images/services-bk.jpg" alt="carlos beltran backflow services" /></span>
+											<span class="image featured"><img src="images/backflow-testing-in-action.webp" alt="carlos beltran backflow services" /></span>
 
 											<p>
 												Protecting the public water system is an essential part of my mission to protect public health. 
