chore: clean up

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<p style="font-family: 'Courgette', cursive; margin-bottom: 0px; font-size: 20px; color: #f7f7f7;">By</p>
 						<p id="banner-heading-2">
 							<br>
-							<span><a href="https://cbeltran.com/services.html" style="color: #ffffff;" target="_blank">Carlos Beltran</a></span>
+							<span>Carlos Beltran</a></span>
 						</p>
 					</div>
 					<header>
